# burn-central-client

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: auto-release.yml  publish.yml
burn-central-api/: Cargo.toml
burn-central-api/src/: client.rs  lib.rs  websocket.rs
burn-central-api/src/artifact/: request.rs  response.rs
burn-central-api/src/experiment/: mod.rs  request.rs
burn-central-api/src/job/: request.rs
burn-central-api/src/model/: mod.rs  response.rs
burn-central-api/src/project/: request.rs
burn-central-api/src/schemas/: response.rs
burn-central-api/src/user/: response.rs
burn-central-client/: Cargo.toml
burn-central-client/src/: client.rs  error.rs  lib.rs  transport.rs  websocket.rs
burn-central-client/src/artifact/: mod.rs
burn-central-client/src/experiment/: mod.rs  websocket.rs
burn-central-client/src/fleet/: mod.rs  request.rs  response.rs
burn-central-client/src/job/: mod.rs
burn-central-client/src/model/: mod.rs  request.rs  response.rs
burn-central-client/src/project/: mod.rs  request.rs
burn-central-client/src/station/dataset/: mod.rs  request.rs  response.rs
burn-central-client/src/station/experiment/: mod.rs  request.rs  response.rs  websocket.rs
burn-central-client/src/user/: mod.rs
tracel-client/src/: websocket.rs
tracel-client/src/experiment/: mod.rs  request.rs  response.rs  websocket.rs
tracel-client/src/station/experiment/: mod.rs  response.rs
xtask/: Cargo.toml
