[package]
name = "burn-central-api"
version = "0.1.0"
edition = '2024'
authors = ["Burn central team"]
description = "Collection of HTTP calls required to communicate with the backend of burn-central"
homepage = "https://burn.dev"
repository = "https://github.com/tracel-ai/burn-central-client"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version="0.12.24", features = ["blocking"] }
serde = { version="1.0.228", features = ["derive"] }
uuid = {version="1.18.1" }
serde_json = { version="1.0.145" }
thiserror = { version="2.0.17" }
strum = { version="0.27.2", features = ["derive"]  }

[profile.dev]
debug = 0
