[workspace]
# Use resolver version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["burn-central-client", "xtask"]

[workspace.package]
edition = "2024"
version = "0.4.0"
authors = ["Burn central team"]
homepage = "https://burn.dev"
repository = "https://github.com/tracel-ai/burn-central-client"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
uuid = { version = "1.18.1" }
thiserror = { version = "2.0.17" }
strum = { version = "0.27.2", features = ["derive"] }
tungstenite = { version = "0.26.2", features = ["native-tls"] }
tracing = { version = "0.1" }

[profile.dev]
debug = 0
