[package]
name = "burn-central-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Collection of HTTP calls required to communicate with the backend of burn-central"
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
uuid.workspace = true
serde_json.workspace = true
thiserror.workspace = true
strum.workspace = true
tungstenite.workspace = true 
